# openai_docchat

./: README.md  document_chatbot.py  kb_doc_embeddings_df.csv  model_answer_log_df.csv  pdf_embeddings.py  pyproject.toml  sap_embeddings_df.csv  setup.py
openai_docchat/: chatbot.py  create_kb_embeddings.py
